released v0.20.4 - fixed RangeSlide jumping issue and fixed new default TTL setting

--- a/src/styles/extras.scss
+++ b/src/styles/extras.scss
@@ -56,3 +56,7 @@
     -moz-transform: rotate(0.5deg);
   }
 }
+
+.rangeSlider {
+  margin: 0.5em 0.1em !important;
+}
